log
Sun, Mar 30, 2025 11:02:32 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Sun, Mar 30, 2025 11:05:21 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d144584
Sun, Mar 30, 2025 11:08:19 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
82f0f12
Sun, Mar 30, 2025 11:09:52 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
7d3eb6e
Sun, Mar 30, 2025 11:12:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
099b4da
Sun, Mar 30, 2025 11:12:20 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
21f7d40
Sun, Mar 30, 2025 11:13:19 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f51d340
Sun, Mar 30, 2025 11:16:38 AM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
e4a6e26
Sun, Mar 30, 2025 11:18:20 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e2e3798
Sun, Mar 30, 2025 11:22:34 AM: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:67:5: error: unknown type name 'Nodo'
     Nodo* Nuevo = createNode(data);
     ^~~~
list.c:67:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Nodo* Nuevo = createNode(data);
                   ^~~~~~~~~~
list.c:69:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list -> head = Nuevo;
                      ^
list.c:70:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list -> tail = Nuevo;
                      ^
list.c:72:15: error: request for member 'next' in something not a structure or union
         Nuevo -> next = list -> head;
               ^~
list.c:73:30: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list -> head -> prev = Nuevo;
                              ^
list.c:74:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list -> head = Nuevo;
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
9acbb6a
Sun, Mar 30, 2025 11:23:49 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0718aff
